2006-10-25  Yves Combe  <yves@ycombe.net>

	Reapply patch suppressed from HEAD branch, for cross compile with mingw.

	* Makefile.am:
	* Makefile.mingw.in:
	* acinclude.m4:
	* configure.in:
	* cross-configure.sh:
	* gcompris-installer.nsi.in:
	* po/ChangeLog:
	* po/fi.po:
	* src/boards/Makefile.am:
	* src/boards/advanced_colors.c: (colors_next_level),
	(colors_create_item):
	* src/boards/algebra.c: (get_operand), (get_random_number):
	* src/boards/algebra_guesscount.c: (generate_numbers):
	* src/boards/awele.c: (initBoardGraphics), (updateNbBeans):
	* src/boards/awele_alphaBeta.c: (firstChild):
	* src/boards/awele_utils.c: (randplay):
	* src/boards/click_on_letter.c: (click_on_letter_create_item):
	* src/boards/clickgame.c: (clickgame_create_item),
	(load_random_pixmap):
	* src/boards/clockgame.c: (get_random_hour):
	* src/boards/colors.c: (start_board):
	* src/boards/crane.c: (shuffle_list):
	* src/boards/enumerate.c: (enumerate_create_item):
	* src/boards/erase.c: (shuffle_image_list):
	* src/boards/fifteen.c: (scramble):
	* src/boards/gletters.c: (gletters_create_item):
	* src/boards/gtans.c:
	* src/boards/gtans_support.c: (check_file_exists):
	* src/boards/hanoi.c: (hanoi_create_item):
	* src/boards/imageid.c: (imageid_create_item):
	* src/boards/leftright.c: (leftright_create_item):
	* src/boards/machpuzzle.c: (minigolf_create_item):
	* src/boards/magic_hat.c: (magic_hat_create_item):
	* src/boards/maze.c: (maze_next_level), (generateMaze):
	* src/boards/memory.c: (get_random_token), (get_image), (tux_play):
	* src/boards/missingletter.c: (missing_letter_create_item):
	* src/boards/money.c: (money_next_level):
	* src/boards/paratrooper.c: (paratrooper_next_level),
	(paratrooper_create_cloud):
	* src/boards/planegame.c: (planegame_create_item):
	* src/boards/py-mod-gcompris.c: (py_gcompris_child_watch_add),
	(py_gcompris_spawn_async):
	* src/boards/railroad.c: (railroad_create_item):
	* src/boards/read_colors.c: (start_board):